Fix: 등록 수정 및 필터링 수정