@@ -427,9 +427,6 @@ public class CampaignQueryService {
             return null;
         }
 
-        // 날짜 포맷터 선언
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
-
         // 2. 캠페인 유저 리스트 조회
         List<User> userList = campaignQueryMapper.selectCampaignUserList(detail.getClientCompanyId());
         detail.setUserList(userList);
@@ -442,16 +439,8 @@ public class CampaignQueryService {
         detail.setExpectedRevenue(totalExpectedRevenue);
 
 
-        BigDecimal avgProfitMargin = campaignQueryMapper.selectAverageExpectedProfitMargin(campaignId);
-
-        if (avgProfitMargin != null) {
-            detail.setExpectedProfitMargin(
-                    avgProfitMargin.multiply(BigDecimal.valueOf(100))
-                            .setScale(0, RoundingMode.HALF_UP)
-            );
-        } else {
-            detail.setExpectedProfitMargin(BigDecimal.ZERO);
-        }
+        float avgProfitMargin = campaignQueryMapper.selectAverageExpectedProfitMargin(campaignId);
+        detail.setExpectedProfitMargin(avgProfitMargin);
 
         String notes = campaignQueryMapper.selectCampaignNotes(campaignId);
         detail.setNotes(notes);
@@ -475,51 +464,50 @@ public class CampaignQueryService {
     public CampaignListResponse getPagedCampaigns(int page, int size, ContractListRequest request) {
         int offset = (page - 1) * size;
 
-        List<CampaignListDTO> campaigns = campaignQueryMapper.findPagedCampaigns(size, offset, request);
+        List<CampaignListsDTO> campaigns = campaignQueryMapper.findPagedCampaigns(size, offset, request);
+        if (campaigns.isEmpty()) {
+            Pagination pagination = Pagination.builder()
+                    .currentPage(page)
+                    .size(size)
+                    .totalPage(0)
+                    .totalCount(0)
+                    .build();
+
+            return CampaignListResponse.builder()
+                    .campaignList(Collections.emptyList())
+                    .pagination(pagination)
+                    .build();
+        }
+
         List<Long> campaignIds = campaigns.stream()
-                .map(CampaignListDTO::getCampaignId)
-                .distinct()
-                .toList();
+                .map(CampaignListsDTO::getCampaignId)
+                .collect(Collectors.toList());
 
-        if (!campaignIds.isEmpty()) {
-            List<PipelineStepStatusDto> steps = campaignQueryMapper.findPipelineStepsByCampaignIdsList(campaignIds, request);
+        List<PipelineStepsDto> stepsList = campaignQueryMapper.findPipelineStepsGroupedByCampaignIds(campaignIds);
 
-            Map<Long, List<PipelineStepDto>> stepMap = steps.stream()
-                    .collect(Collectors.groupingBy(
-                            PipelineStepStatusDto::getCampaignId,
-                            Collectors.mapping(
-                                    s -> new PipelineStepDto(s.getStepType(), s.getStartedAt()),
-                                    Collectors.toList()
-                            )
-                    ));
+        Map<Long, List<PipelineStepsDto>> stepMap = stepsList.stream()
+                .collect(Collectors.groupingBy(PipelineStepsDto::getCampaignId));
 
-            for (CampaignListDTO dto : campaigns) {
-                List<PipelineStepDto> stepList = stepMap.getOrDefault(dto.getCampaignId(), Collections.emptyList());
-                dto.setPipelineSteps(stepList);
-
-                // 사후관리는 제외 (총 7단계만 계산)
-                long completed = stepList.stream().filter(s -> s.getStartedAt() != null).count();
-                dto.setSuccessProbability((int) ((completed / 7.0) * 100));
-            }
+        for (CampaignListsDTO campaign : campaigns) {
+            List<PipelineStepsDto> steps = stepMap.getOrDefault(campaign.getCampaignId(), new ArrayList<>());
+            campaign.setPipelineSteps(steps);
         }
 
         int totalCount = campaignQueryMapper.getTotalSize(request);
-        log.info("totalcount : {}",totalCount);
 
         Pagination pagination = Pagination.builder()
                 .currentPage(page)
                 .size(size)
-                .totalPage((int) Math.ceil((double) totalCount /size))
+                .totalPage((int) Math.ceil((double) totalCount / size))
                 .totalCount(totalCount)
                 .build();
-
-
 
         return CampaignListResponse.builder()
                 .campaignList(campaigns)
                 .pagination(pagination)
                 .build();
     }
+
 
     public QuotationReferenceListResponse getQuotationReferenceList(Long campaignId) {
         List<ReferenceDto> contractReferenceList = campaignQueryMapper.getReferenceList(campaignId, PipelineStepConstants.QUOTATION);
@@ -588,11 +576,15 @@ public class CampaignQueryService {
         if (!campaignIds.isEmpty()) {
             List<PipelineStepStatusDto> steps = campaignQueryMapper.findPipelineStepsByCampaignIds(campaignIds);
 
+            for (PipelineStepStatusDto step : steps) {
+                log.info(step.toString());
+            }
+
             Map<Long, List<PipelineStepDto>> stepMap = steps.stream()
                     .collect(Collectors.groupingBy(
                             PipelineStepStatusDto::getCampaignId,
                             Collectors.mapping(
-                                    s -> new PipelineStepDto(s.getStepType(), s.getStartedAt()),
+                                    s -> new PipelineStepDto(s.getStepType(), s.getCreatedAt()),
                                     Collectors.toList()
                             )
                     ));
@@ -600,7 +592,12 @@ public class CampaignQueryService {
             for (CampaignListDTO dto : campaigns) {
                 List<PipelineStepDto> stepList = stepMap.getOrDefault(dto.getCampaignId(), Collections.emptyList());
                 dto.setPipelineSteps(stepList);
-                long completed = stepList.stream().filter(s -> s.getStartedAt() != null).count();
+                long completed = stepList.stream()
+                        .filter(s -> s.getStepType() != null)
+                        .map(s -> s.getStepType())
+                        .distinct()
+                        .count();
+
                 dto.setSuccessProbability((int) ((completed / 7.0) * 100));
             }
         }
